import java.util.ArrayList;

public class PizzaCheeseStyleBrest extends Pizza {

    public PizzaCheeseStyleBrest() {
        super();
        this.nom = "Pizza sauce style brest et fromage";
        this.garnitures = new ArrayList();
        this.garnitures.add("Parmigiano reggiano râpé");
    }
}
