import java.util.ArrayList;

public class PizzaCheeseStyleStrasbourg extends Pizza{
    public PizzaCheeseStyleStrasbourg() {
        this.nom = "Pizza pâte style Strasbourg et fromage";
        this.garnitures = new ArrayList();
        this.garnitures.add("Mozzarella en lamelles");
    }
}
