public abstract class PizzaFactory {
    public abstract Pizza create(String name);
}
