import java.util.ArrayList;

public class PizzaGrecqueStyleBrest extends Pizza {
}
