import java.util.ArrayList;

public class PizzaGrecqueStyleStrasbourg extends Pizza {
}
