import java.util.ArrayList;

public class PizzaPoivronStyleBrest extends Pizza {
}
