import java.util.ArrayList;

public class PizzaPoivronStyleStrasbourg extends Pizza{
}
