@startuml

title __JAVA's Class Diagram__\n


    abstract class Pizza {
        ~ garnitures : ArrayList
        ~ nom : String
        ~ pate : String
        ~ sauce : String
        + couper()
        + cuire()
        + emballer()
        + getNom()
        + preparer()
    }

  


    class PizzaCheeseStyleBrest {
        + PizzaCheeseStyleBrest()
    }

  

    class PizzaCheeseStyleStrasbourg {
        + PizzaCheeseStyleStrasbourg()
    }

  

    abstract class PizzaFactory {
        {abstract} + create()
    }


    class PizzaFactoryBrest {
        {static} - uniqueInstance : PizzaFactoryBrest
        + create()
        {static} + getInstance()
    }

  


    class PizzaFactoryStrasbourg {
        {static} - uniqueInstance : PizzaFactoryStrasbourg
        + create()
        {static} + getInstance()
    }

  


    class PizzaGrecqueStyleBrest {
    }

  


    class PizzaGrecqueStyleStrasbourg {
    }

  

    class PizzaPoivronStyleBrest {
    }

  


    class PizzaPoivronStyleStrasbourg {
    }

  

    class PizzaTestDrive {
        {static} + main()
    }

  

    abstract class Pizzeria {
        + Pizzeria()
        + commanderPizza()
        {abstract} + createPizza()
    }

  


    class PizzeriaBrest {
        + PizzeriaBrest()
        + createPizza()
    }

  


    class PizzeriaFactory {
        {static} ~ uniqueInstance : PizzeriaFactory
        + PizzeriaFactory()
        + create()
        {static} + getInstance()
    }


    class PizzeriaStrasbourg {
        + PizzeriaStrasbourg()
        + createPizza()
    }

  

  Pizza <|-- PizzaCheeseStyleBrest
  Pizza <|--PizzaCheeseStyleStrasbourg
  PizzaFactory <|-- PizzaFactoryBrest
  PizzaFactory <|-- PizzaFactoryStrasbourg
  Pizza <|-- PizzaGrecqueStyleBrest
  Pizza <|-- PizzaGrecqueStyleStrasbourg
  Pizza <|-- PizzaPoivronStyleBrest
  Pizza <|-- PizzaPoivronStyleStrasbourg
  Pizzeria -->"1" PizzaFactory : factory
  Pizzeria <|-- PizzeriaBrest
  Pizzeria <|-- PizzeriaStrasbourg



right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
